--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "jwt-decode": "^4.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
